[package]
name = "config"
version = "0.1.0"
edition = "2021"

[dependencies]
figment = { version = "0.10.19", features=["toml", "env", "json"]}
serde = {version = "1.0", features=["derive"]}
validator = {version = "0.20", features=["derive"]}

[lib]
path = "src/lib.rs"

[[bin]]
name = "config"
path = "src/main.rs"
