[package]
name = "protobuf-api"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
prost = "0.13.4"
tonic = "0.12.3"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.217", features = ["derive"] }

[build-dependencies]
tonic-build = { version = "0.12.3", features = ["prost"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "protobuf-api"
path = "src/main.rs"
